k8s/checkpod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: sample-pod-check
  labels:
    app: web
    environment: production
spec:
  containers:
  - name: nginx-container
    image: nginx:1.25
    ports:
    - containerPort: 80
