k8s/pod-1.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-1
  namespace: gitops-demo
  labels:
    app: pod-1
spec:
  containers:
    - name: pod-1
      image: busybox:1.36
      command:
        - sh
        - -c
        - |
          mkdir -p /www
          echo "Hello from Pod 1" > /www/index.html
          httpd -f -p 8080 -h /www
