k8s/pod-2.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-2
  namespace: gitops-demo
  labels:
    app: pod-2
spec:
  containers:
    - name: pod-2
      image: busybox:1.36
      command:
        - sh
        - -c
        - |
          mkdir -p /www
          echo "Hello from Pod 2" > /www/index.html
          httpd -f -p 8080 -h /www
