k8s/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gitops-app
  namespace: gitops-demo

spec:
  replicas: 2

  selector:
    matchLabels:
      app: gitops-app

  template:
    metadata:
      labels:
        app: gitops-app

    spec:
      containers:
        - name: gitops-app
          image: gitops-demo-app:v2
          imagePullPolicy: IfNotPresent

          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: gitops-app
  namespace: gitops-demo

spec:
  selector:
    app: gitops-app

  ports:
    - port: 80
      targetPort: 3000

  type: ClusterIP
