k8s/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-pod-1-to-pod-2
  namespace: gitops-demo
spec:
  podSelector:
    matchLabels:
      app: pod-2

  policyTypes:
    - Ingress

  ingress:
    - from:
        - podSelector:
            matchExpressions:
              - key: app
                operator: NotIn
                values:
                  - pod-1
